fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -56,7 +56,7 @@
 		--fs-xxxl: 5rem;
 		--fs-xxl: 4rem;
         --fs-xl: 3rem;
-        --fs-l: 1.5rem;
+        --fs-l: 1.3rem;
         --fs-m: 1rem;
         --fs-s: 0.8rem;
     }
@@ -582,7 +582,7 @@ body {
             "a b";
 		grid-template-columns: 1fr 1fr;
 		gap: 2em;
-		margin-bottom: 1em;
+		margin-bottom: 0;
 	}
 
 	.contact-image {
@@ -607,7 +607,7 @@ body {
 .contact-line {
 	border: 1.5px solid var(--color-dark-brown1);
 	border-radius: 50px;
-	width: 30em;
+	width: 15em;
 	margin-bottom: 0;
 }
 
@@ -624,7 +624,17 @@ body {
 	display: flex;
 	flex-direction: column;
 	gap: 0.2em;
-	width: 40em;
+	width: 30em;
+}
+
+@media (min-width: 800px) {
+	.contact-form-input-container {
+		width: 40em;
+	}
+
+	.contact-line {
+		width: 30em;
+	}
 }
 
 .contact-form-label {
